--- a/index.html
+++ b/index.html
@@ -39,91 +39,61 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">External Review Committee</span>
-                <span class="rhs"><abbr>POPL</abbr>&nbsp;’16</span>
-              </div>
-              <div class="info">
-                <a href="http://conf.researchr.org/home/POPL-2016">43rd <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a>
+                <span class="rhs"><a href="http://conf.researchr.org/home/POPL-2016"><abbr>POPL</abbr>&nbsp;’16</a></span>
               </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">External Review Committee</span>
-                <span class="rhs"><abbr>PPoPP</abbr>&nbsp;’16</span>
-              </div>
-              <div class="info">
-                <a href="https://ppopp15.soe.ucsc.edu">21st <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr></abbr> Symposium on Principles and Practice of Parallel Programming</a>
+                <span class="rhs"><a href="https://ppopp15.soe.ucsc.edu"><abbr>PPoPP</abbr>&nbsp;’16</a></span>
               </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
-                <span class="rhs"><abbr>EC<sup>2</sup></abbr>&nbsp;’15</span>
-              </div>
-              <div class="info">
-                <a href="http://multicore.doc.ic.ac.uk/events/ec2/">8th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
+                <span class="rhs"><a href="http://multicore.doc.ic.ac.uk/events/ec2/"><abbr>EC<sup>2</sup></abbr>&nbsp;’15</a></span>
               </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">External Review Committee</span>
-                <span class="rhs"><abbr>POPL</abbr>&nbsp;’15</span>
-              </div>
-              <div class="info">
-                <a href="http://popl.mpi-sws.org/2015/">42nd <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a>
+                <span class="rhs"><a href="http://popl.mpi-sws.org/2015/"><abbr>POPL</abbr>&nbsp;’15</a></span>
               </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
-                <span class="rhs"><abbr>FM</abbr>&nbsp;’15</span>
-              </div>
-              <div class="info">
-                <a href="http://fm2015.ifi.uio.no">20th International Symposium on Formal Methods</a>
+                <span class="rhs"><a href="http://fm2015.ifi.uio.no"><abbr>FM</abbr>&nbsp;’15</a></span>
               </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Chair</span>
-                <span class="rhs"><abbr>EC<sup>2</sup></abbr>&nbsp;’14</span>
-              </div>
-              <div class="info">
-                <a href="http://software.imdea.org/ec2-2014/">7th International Workshop on Exploiting Concurrency Efficiently and Correctly</a>
+                <span class="rhs"><a href="http://software.imdea.org/ec2-2014/"><abbr>EC<sup>2</sup></abbr>&nbsp;’14</a></span>
               </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">External Review Committee</span>
-                <span class="rhs"><abbr>PLDI</abbr>&nbsp;’14</span>
-              </div>
-              <div class="info">
-                <a href="http://conferences.inf.ed.ac.uk/pldi2014/">35th annual <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr></abbr> Conference on Programming Language Design and Implementation</a>
+                <span class="rhs"><a href="http://conferences.inf.ed.ac.uk/pldi2014/"><abbr>PLDI</abbr>&nbsp;’14</a></span>
               </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">External Review Committee</span>
-                <span class="rhs"><abbr>POPL</abbr>&nbsp;’13</span>
-              </div>
-              <div class="info">
-                <a href="http://popl.mpi-sws.org/2013/">40th <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a>
+                <span class="rhs"><a href="http://popl.mpi-sws.org/2013/"><abbr>POPL</abbr>&nbsp;’13</a></span>
               </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
-                <span class="rhs"><abbr>VMCAI</abbr>&nbsp;’13</span>
-              </div>
-              <div class="info">
-                <a href="http://vmcai13.di.univr.it/">14th International Conference on Verification, Model Checking and Abstract Interpretation</a>
+                <span class="rhs"><a href="http://vmcai13.di.univr.it/"><abbr>VMCAI</abbr>&nbsp;’13</a></span>
               </div>
             </div>
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
-                <span class="rhs"><abbr>Bytecode</abbr>&nbsp;’11</span>
-              </div>
-              <div class="info">
-                <a href="http://vmcai13.di.univr.it/">6th International Workshop on Bytecode Semantics, Verification, Analysis and Transformation</a>
+                <span class="rhs"><a href="http://vmcai13.di.univr.it/"><abbr>Bytecode</abbr>&nbsp;’11</a></span>
               </div>
             </div>
         </section>
@@ -407,11 +377,9 @@ Campus Montegancedo <abbr>UPM</abbr><br>
 28223 Pozuelo de Alarcón, Madrid<br>
 España
 </div>
-            <div class="item">
-              <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a>
-            </div>
-              <div class="item">+34 911 012 202 (Spain)</div>
-              <div class="item">+1 (310) 564-6453 (<abbr>USA</abbr>)</div>
+            <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
+              <a href="tel:+34 911 012 202">+34 911 012 202</a> (Spain)<br>
+              <a href="tel:+1 (310) 564-6453">+1 (310) 564-6453</a> (<abbr>USA</abbr>)<br>
         </section>
 
       </div>
