--- a/cv.html
+++ b/cv.html
@@ -413,7 +413,7 @@ España
               <a href="http://doi.acm.org/10.1145/1274940.1274947">Assembling an Expressive Facial Animation System</a>.
           </span>
           In <span class="article-volume">Proc. <abbr>ACM</abbr> <abbr>SIGGRAPH </abbr> Symposium on Video Games</span>
-          (Sandbox&nbsp;’07), pages 21–26.
+          (<abbr>Sandbox</abbr>&nbsp;’07), pages 21–26.
           <abbr>ACM</abbr>, 2007.
           <span class="screen-only">(<a href="papers/conf-sandbox-WangEF07.pdf"><abbr>PDF</abbr></a>)</span>
         </div>
