--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <span class="lhs">
                     <a href="papers/conf-sandbox-WangEF07.pdf">Assembling an Expressive Facial Animation System</a>
                 </span>
-                <span class="rhs">Sandbox&nbsp;’07</span>
+                <span class="rhs"><abbr>Sandbox</abbr>&nbsp;’07</span>
               </div>
             </div>
             <div class="item">
