--- a/cv.html
+++ b/cv.html
@@ -210,10 +210,10 @@ España
         <div class="item">
           Michael Emmi, Constantin Enea, and Jad Hamza.
           <span class="article-title">
-              Monitoring Refinement via Symbolic Reasoning.
+              <a href="http://doi.acm.org/10.1145/2737924.2737983">Monitoring Refinement via Symbolic Reasoning</a>.
           </span>
           In <span class="article-volume">Proc. 36th annual <abbr>ACM</abbr> <abbr>SIGPLAN</abbr> conference on Programming Language Design and Implementation</span>
-          (<abbr>PLDI</abbr>&nbsp;’15), pages 341–350.
+          (<abbr>PLDI</abbr>&nbsp;’15), pages 260–269.
           <abbr>ACM</abbr>, 2015.
           <span class="screen-only">(<a href="papers/conf-pldi-EmmiEH15.pdf"><abbr>PDF</abbr></a>)</span>
         </div>
