--- a/cv.html
+++ b/cv.html
@@ -35,7 +35,7 @@ España
       <h2>About</h2>
       <div>
         
-<p>Michael received his doctorate in Computer Science from <abbr>UCLA</abbr> in 2010 and joined the <abbr>IMDEA</abbr> Software Institute in 2013, following a postdoc fellowship at the Université Paris Diderot awarded by La Fondation Sciences Mathématiques de Paris. Prior to all that, Michael completed his undergraduate studies at Binghamton University (<abbr>SUNY</abbr>). He has been a teaching assistant for undergraduate courses at <abbr>UCLA</abbr> and Université Paris Diderot, and has held internships at Microsoft Research, <abbr>NASA</abbr> Ames Research Center, and <abbr>IBM</abbr>.</p>
+<p>Michael received his doctorate in Computer Science from <abbr>UCLA</abbr> in 2010 and joined the <abbr>IMDEA</abbr> Software Institute in 2013, following a postdoc fellowship at the Université Paris Diderot awarded by La Fondation Sciences Mathématiques de Paris (<abbr>FSMP</abbr>). Prior to all that, Michael completed his undergraduate studies at Binghamton University (<abbr>SUNY</abbr>). He has been a teaching assistant for undergraduate courses at <abbr>UCLA</abbr> and Université Paris Diderot, and has held internships at Microsoft Research, <abbr>NASA</abbr> Ames Research Center, and <abbr>IBM</abbr>.</p>
 <p>Michael’s research enables the construction of reliable software by developing the foundations for effective programming abstractions and informative program analysis tools. Integrating technological trends with knowledge from several research communities spanning automata theory, programming languages, and distributed systems, his contributions include establishing the theoretical limits of program analysis, devising tractable approximations for intractable analysis problems, and building effective analysis tools.</p>
 
       </div>
@@ -70,63 +70,63 @@ España
     <section id="positions">
       <h2>Employment</h2>
         <div class="item">
-          <span class="article-title">Researcher</span>, <abbr>IMDEA</abbr> Software Institute, Madrid, 2013–Present.
+          <span class="article-title">Researcher</span>. <abbr>IMDEA</abbr> Software Institute, Madrid, 2013–Present.
         </div>
         <div class="item">
-          <span class="article-title">Postdoc Researcher</span>, <abbr>LIAFA</abbr>, Universtié Paris Diderot, 2010–2013.
+          <span class="article-title">Postdoc Researcher</span>. <abbr>LIAFA</abbr>, Universtié Paris Diderot, 2010–2013.
         </div>
         <div class="item">
-          <span class="article-title">Lecturer (<abbr>ATER</abbr>)</span>, Université Paris Diderot, 2012–2013.
+          <span class="article-title">Lecturer (<abbr>ATER</abbr>)</span>. Université Paris Diderot, 2012–2013.
         </div>
         <div class="item">
-          <span class="article-title">Visiting Researcher</span>, Microsoft Research, Bangalore, 2011.
+          <span class="article-title">Visiting Researcher</span>. Microsoft Research, Bangalore, 2011.
         </div>
         <div class="item">
-          <span class="article-title">Research Intern</span>, Microsoft Research, Redmond, 2010.
+          <span class="article-title">Research Intern</span>. Microsoft Research, Redmond, 2010.
         </div>
         <div class="item">
-          <span class="article-title">Research Intern</span>, Microsoft Research, Cambridge (<abbr>UK</abbr>), 2008.
+          <span class="article-title">Research Intern</span>. Microsoft Research, Cambridge (<abbr>UK</abbr>), 2008.
         </div>
         <div class="item">
-          <span class="article-title">Research Intern</span>, Microsoft Research, Redmond, 2007.
+          <span class="article-title">Research Intern</span>. Microsoft Research, Redmond, 2007.
         </div>
         <div class="item">
-          <span class="article-title">Research Intern</span>, <abbr>NASA</abbr> Ames Research Center, 2006.
+          <span class="article-title">Research Intern</span>. <abbr>NASA</abbr> Ames Research Center, 2006.
         </div>
         <div class="item">
-          <span class="article-title">Research Assistant</span>, University of California, Los Angeles (<abbr>UCLA</abbr>), 2006–2010.
+          <span class="article-title">Research Assistant</span>. University of California, Los Angeles (<abbr>UCLA</abbr>), 2006–2010.
         </div>
         <div class="item">
-          <span class="article-title">Teaching Assistant</span>, University of California, Los Angeles (<abbr>UCLA</abbr>), 2003–2005.
+          <span class="article-title">Teaching Assistant</span>. University of California, Los Angeles (<abbr>UCLA</abbr>), 2003–2005.
         </div>
         <div class="item">
-          <span class="article-title">Software Engineer Intern</span>, <abbr>IBM</abbr>, Endicott, 2001, 2002.
+          <span class="article-title">Software Engineer Intern</span>. <abbr>IBM</abbr>, Endicott, 2001, 2002.
         </div>
         <div class="item">
-          <span class="article-title">Course Assistant</span>, Binghamton University (<abbr>SUNY</abbr>), 2001–2002.
+          <span class="article-title">Course Assistant</span>. Binghamton University (<abbr>SUNY</abbr>), 2001–2002.
         </div>
     </section>
 
     <section id="references">
       <h2>References</h2>
         <div class="item">
-          <span class="article-title"><a href="http://www.liafa.jussieu.fr/~abou/">Ahmed Bouajjani</a></span>, Professor, Université Paris Diderot.
+          <span class="article-title"><a href="http://www.liafa.jussieu.fr/~abou/">Ahmed Bouajjani</a></span>. Professor, Université Paris Diderot.
           <span class="print-only"><a href="mailto:abou@liafa.univ-paris-diderot.fr">abou@liafa.univ-paris-diderot.fr</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://www.mpi-sws.org/~rupak/">Rupak Majumdar</a></span>, Scientific Director, Max Planck Institut for Software Systems.
+          <span class="article-title"><a href="http://www.mpi-sws.org/~rupak/">Rupak Majumdar</a></span>. Scientific Director, Max Planck Institut for Software Systems.
           <span class="print-only"><a href="mailto:rupak@mpi-sws.org">rupak@mpi-sws.org</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/qadeer/">Shaz Qadeer</a></span>, Senior Researcher, Microsoft Research.
+          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/qadeer/">Shaz Qadeer</a></span>. Principal Researcher, Microsoft Research.
           <span class="print-only"><a href="mailto:qadeer@microsoft.com">qadeer@microsoft.com</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://ti.arc.nasa.gov/profile/dimitra/">Dimitra Giannakopoulou</a></span>, Research Computer Scientist, <abbr>NASA</abbr> Ames Research Center.
+          <span class="article-title"><a href="http://ti.arc.nasa.gov/profile/dimitra/">Dimitra Giannakopoulou</a></span>. Research Computer Scientist, <abbr>NASA</abbr> Ames Research Center.
           <span class="print-only"><a href="mailto:Dimitra.Giannakopoulou@nasa.gov">Dimitra.Giannakopoulou@nasa.gov</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/jjb/">Josh Berdine</a></span>, Researcher, Microsoft Research.
+          <span class="article-title"><a href="http://research.microsoft.com/en-us/people/jjb/">Josh Berdine</a></span>. Researcher, Microsoft Research.
           <span class="print-only"><a href="mailto:jjb@microsoft.com">jjb@microsoft.com</a></span>
         </div>
     </section>
