Added new PC, plus new software.

--- a/cv.html
+++ b/cv.html
@@ -134,6 +134,11 @@ España
     <section id="activities">
       <h2>Activities</h2>
         <div class="item">
+          <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="http://netys.net">2nd International Conference on Networked Systems</a></span>
+          (<abbr>NETYS</abbr>&nbsp;’16).
+        </div>
+        <div class="item">
           <span class="article-title">External Review Committee</span>.
           <span class="article-volume"><a href="http://conf.researchr.org/home/POPL-2016">43rd <abbr><abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr></abbr> Symposium on Principles of Programming Languages</a></span>
           (<abbr>POPL</abbr>&nbsp;’16).
@@ -474,10 +479,16 @@ España
           <span class="print-only"><a href="https://github.com/imdea-software/violin">https://github.com/imdea-software/violin</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="https://github.com/michael-emmi/c2s">c2s</a></span>,
-          program “sequentializations” for reducing bounded concurrent program verification to sequential program verification.
+          <span class="article-title"><a href="https://github.com/michael-emmi/bam-bam-boogieman">BAM! BAM! Boogieman</a></span>,
+          <strong>B</strong>oogie <strong>A</strong>ST <strong>M</strong>anipulator which implements various code analyses and transformations for the Boogie intermediate verification language.
 
-          <span class="print-only"><a href="https://github.com/michael-emmi/c2s">https://github.com/michael-emmi/c2s</a></span>
+          <span class="print-only"><a href="https://github.com/michael-emmi/bam-bam-boogieman">https://github.com/michael-emmi/bam-bam-boogieman</a></span>
+        </div>
+        <div class="item">
+          <span class="article-title"><a href="https://github.com/michael-emmi/whittle">Whittle</a></span>,
+          Minimizes input files via “delta debugging” by repeatedly “whittling” down features while maintaining validity.
+
+          <span class="print-only"><a href="https://github.com/michael-emmi/whittle">https://github.com/michael-emmi/whittle</a></span>
         </div>
         <div class="item">
           <span class="article-title"><a href="https://github.com/michael-emmi/printlncs">printlncs</a></span>,
