--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
           <h2>Professional Activities</h2>
             <div class="item">
               <div class="head">
+                <span class="lhs">Program Committee</span>
+                <span class="rhs"><a href="http://netys.net"><abbr>NETYS</abbr>&nbsp;’16</a></span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">External Review Committee</span>
                 <span class="rhs"><a href="http://conf.researchr.org/home/POPL-2016"><abbr>POPL</abbr>&nbsp;’16</a></span>
               </div>
@@ -350,10 +356,19 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                  <a href="https://github.com/michael-emmi/c2s">c2s</a>
+                  <a href="https://github.com/michael-emmi/bam-bam-boogieman">BAM! BAM! Boogieman</a>
                 </span>
               </div>
-              <div class="info">program “sequentializations” for reducing bounded concurrent program verification to sequential program verification.
+              <div class="info"><strong>B</strong>oogie <strong>A</strong>ST <strong>M</strong>anipulator which implements various code analyses and transformations for the Boogie intermediate verification language.
+</div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
+                  <a href="https://github.com/michael-emmi/whittle">Whittle</a>
+                </span>
+              </div>
+              <div class="info">Minimizes input files via “delta debugging” by repeatedly “whittling” down features while maintaining validity.
 </div>
             </div>
             <div class="item">
