DOI & pages for CAV & ICALP ’15.

--- a/cv.html
+++ b/cv.html
@@ -195,20 +195,20 @@ España
         <div class="item">
           Burcu Kulahcioglu Ozkan, Michael Emmi, and Serdar Tasiran.
           <span class="article-title">
-              Systematic Asynchrony Bug Exploration for Android Apps.
+              <a href="http://dx.doi.org/10.1007/978-3-319-21690-4_28">Systematic Asynchrony Bug Exploration for Android Apps</a>.
           </span>
           In <span class="article-volume">Proc. 27th International Conference on. Computer Aided Verification</span>
-          (<abbr>CAV</abbr>&nbsp;’15), <abbr>LNCS</abbr>.
+          (<abbr>CAV</abbr>&nbsp;’15), <abbr>LNCS</abbr>, volume 9206, pages 455–461.
           Springer, 2015.
           
         </div>
         <div class="item">
           Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Jad Hamza.
           <span class="article-title">
-              On Reducing Linearizability to State Reachability.
+              <a href="http://dx.doi.org/10.1007/978-3-662-47666-6_8">On Reducing Linearizability to State Reachability</a>.
           </span>
           In <span class="article-volume">Proc. 42nd International Colloquium on Automata, Languages, and Programming</span>
-          (<abbr>ICALP</abbr>&nbsp;’15), <abbr>LNCS</abbr>, volume 9135.
+          (<abbr>ICALP</abbr>&nbsp;’15), <abbr>LNCS</abbr>, volume 9135, pages 95–107.
           Springer, 2015.
           <span class="screen-only">(<a href="papers/conf-icalp-BouajjaniEEH15.pdf"><abbr>PDF</abbr></a>)</span>
         </div>
