Added accepted POPL ’16 paper.

--- a/cv.html
+++ b/cv.html
@@ -193,6 +193,16 @@ España
     <section id="publications">
       <h2>Publications</h2>
         <div class="item">
+          Michael Emmi and Constantin Enea.
+          <span class="article-title">
+              Symbolic Abstract Data Type Inference.
+          </span>
+          In <span class="article-volume">Proc. 43rd <abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr> Symposium on Principles of Programming Languages</span>
+          (<abbr>POPL</abbr>&nbsp;’16).
+          <abbr>ACM</abbr>, 2016.
+          
+        </div>
+        <div class="item">
           Burcu Kulahcioglu Ozkan, Michael Emmi, and Serdar Tasiran.
           <span class="article-title">
               <a href="http://dx.doi.org/10.1007/978-3-319-21690-4_28">Systematic Asynchrony Bug Exploration for Android Apps</a>.
