--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                    <a>Symbolic Abstract Data Type Inference</a>
+                </span>
+                <span class="rhs"><abbr>POPL</abbr>&nbsp;’16</span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                     <a>Systematic Asynchrony Bug Exploration for Android Apps</a>
                 </span>
                 <span class="rhs"><abbr>CAV</abbr>&nbsp;’15</span>
