--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>Systematic Asynchrony Bug Exploration for Android Apps</a>
+                    <a href="papers/conf-cav-OzkanET15.pdf">Systematic Asynchrony Bug Exploration for Android Apps</a>
                 </span>
                 <span class="rhs"><abbr>CAV</abbr>&nbsp;’15</span>
               </div>
