Added POPL print.

--- a/publications.html
+++ b/publications.html
@@ -47,9 +47,9 @@
                 Symbolic Abstract Data Type Inference.
             </span>
             In <span class="article-volume">Proc. 43rd <abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr> Symposium on Principles of Programming Languages</span>
-            (<abbr>POPL</abbr>&nbsp;’16).
+            (<abbr>POPL</abbr>&nbsp;’16), pages 513–525.
             <abbr>ACM</abbr>, 2016.
-            
+            <span class="screen-only">(<a href="papers/conf-popl-EmmiE16.pdf"><abbr>PDF</abbr></a>)</span>
           </div>
           <div class="item">
             Burcu Kulahcioglu Ozkan, Michael Emmi, and Serdar Tasiran.
