--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,8 @@
 
     <section id="publications">
       <h2>In International Journals</h2>
-          <div class="item">
+      <ol>
+          <li class="item">
             Ahmed Bouajjani and Michael Emmi.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/s10009-013-0276-z">Bounded Phase Analysis of Message-Passing Programs</a>.
@@ -26,8 +27,8 @@
             (<abbr>STTT</abbr>&nbsp;’14), volume 16, issue 2, pages 127–146.
             Springer, 2014.
             <span class="screen-only">(<a href="papers/journals-sttt-BouajjaniE14.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Ahmed Bouajjani and Michael Emmi.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/2518188">Analysis of Recursively Parallel Programs</a>.
@@ -36,12 +37,14 @@
             (<abbr>TOPLAS</abbr>&nbsp;’13), volume 35, issue 3, pages 10:1–10:49.
             <abbr>ACM</abbr>, 2013.
             <span class="screen-only">(<a href="papers/journals-toplas-BouajjaniE13.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
+          </li>
+      <ol>
     </section>
 
     <section id="publications">
       <h2>In International Conference Proceedings</h2>
-          <div class="item">
+      <ol>
+          <li class="item">
             Michael Emmi and Constantin Enea.
             <span class="article-title">
                 Symbolic Abstract Data Type Inference.
@@ -50,8 +53,8 @@
             (<abbr>POPL</abbr>&nbsp;’16), pages 513–525.
             <abbr>ACM</abbr>, 2016.
             <span class="screen-only">(<a href="papers/conf-popl-EmmiE16.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Burcu Kulahcioglu Ozkan, Michael Emmi, and Serdar Tasiran.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-319-21690-4_28">Systematic Asynchrony Bug Exploration for Android Apps</a>.
@@ -60,8 +63,8 @@
             (<abbr>CAV</abbr>&nbsp;’15), <abbr>LNCS</abbr>, volume 9206, pages 455–461.
             Springer, 2015.
             <span class="screen-only">(<a href="papers/conf-cav-OzkanET15.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Jad Hamza.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-662-47666-6_8">On Reducing Linearizability to State Reachability</a>.
@@ -70,8 +73,8 @@
             (<abbr>ICALP</abbr>&nbsp;’15), <abbr>LNCS</abbr>, volume 9135, pages 95–107.
             Springer, 2015.
             <span class="screen-only">(<a href="papers/conf-icalp-BouajjaniEEH15.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi, Constantin Enea, and Jad Hamza.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/2737924.2737983">Monitoring Refinement via Symbolic Reasoning</a>.
@@ -80,8 +83,8 @@
             (<abbr>PLDI</abbr>&nbsp;’15), pages 260–269.
             <abbr>ACM</abbr>, 2015.
             <span class="screen-only">(<a href="papers/conf-pldi-EmmiEH15.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Arvind Haran, Montgomery Carter, Michael Emmi, Akash Lal, Shaz Qadeer, and Zvonimir Rakamaric.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-662-46681-0_42"><abbr>SMACK</abbr>+Corral: A Modular Verifier</a>.
@@ -90,8 +93,8 @@
             (<abbr>TACAS</abbr>&nbsp;’15), <abbr>LNCS</abbr>, volume 9035, pages 451–454.
             Springer, 2015.
             <span class="screen-only">(<a href="papers/conf-tacas-HaranCELQR15.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi, Pierre Ganty, Rupak Majumdar, and Fernando Rosa-Velardo.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-662-46669-8_22">Analysis of Asynchronous Programs with Event-Based Synchronization</a>.
@@ -100,8 +103,8 @@
             (<abbr>ESOP</abbr>&nbsp;’15), <abbr>LNCS</abbr>, volume 9032, pages 535–559.
             Springer, 2015.
             <span class="screen-only">(<a href="papers/conf-esop-EmmiGMR15.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Jad Hamza.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/2676726.2677002">Tractable Refinement Checking for Concurrent Objects</a>.
@@ -110,8 +113,8 @@
             (<abbr>POPL</abbr>&nbsp;’15), pages 651–662.
             <abbr>ACM</abbr>, 2015.
             <span class="screen-only">(<a href="papers/conf-popl-BouajjaniEEH15.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Zvonimir Rakamaric and Michael Emmi.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-319-08867-9_7"><abbr>SMACK</abbr>: Decoupling Source Language Details from Verifier Implementations</a>.
@@ -120,8 +123,8 @@
             (<abbr>CAV</abbr>&nbsp;’14), <abbr>LNCS</abbr>, volume 8559, pages 106–113.
             Springer, 2014.
             <span class="screen-only">(<a href="papers/conf-cav-RakamaricE14.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi, Burcu Kulahcioglu Ozkan, and Serdar Tasiran.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/2632362.2632370">Exploiting Synchronization in the Analysis of Shared-Memory Asynchronous Programs</a>.
@@ -130,8 +133,8 @@
             (<abbr>SPIN</abbr>&nbsp;’14), pages 20–29.
             <abbr>ACM</abbr>, 2014.
             <span class="screen-only">(<a href="papers/conf-spin-EmmiOT14.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Jad Hamza.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-642-37036-6_17">Verifying Concurrent Programs Against Sequential Specifications</a>.
@@ -140,8 +143,8 @@
             (<abbr>ESOP</abbr>&nbsp;’13), <abbr>LNCS</abbr>, volume 7792, pages 290–309.
             Springer, 2013.
             <span class="screen-only">(<a href="papers/conf-esop-BouajjaniEEH13.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi, Akash Lal, and Shaz Qadeer.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/2393596.2393652">Asynchronous Programs with Prioritized Task-Buffers</a>.
@@ -150,8 +153,8 @@
             (<abbr>FSE</abbr>&nbsp;’12), pages 48.
             <abbr>ACM</abbr>, 2012.
             <span class="screen-only">(<a href="papers/conf-fse-EmmiLQ12.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi and Akash Lal.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-642-33125-1_29">Finding Non-Terminating Executions in Distributed Asynchronous Programs</a>.
@@ -160,8 +163,8 @@
             (<abbr>SAS</abbr>&nbsp;’12), <abbr>LNCS</abbr>, volume 7460, pages 439–455.
             Springer, 2012.
             <span class="screen-only">(<a href="papers/conf-sas-EmmiL12.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Mohamed Faouzi Atig, Ahmed Bouajjani, Michael Emmi, and Akash Lal.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-642-31424-7_19">Detecting Fair Non-Termination in Multithreaded Programs</a>.
@@ -170,8 +173,8 @@
             (<abbr>CAV</abbr>&nbsp;’12), <abbr>LNCS</abbr>, volume 7358, pages 210–226.
             Springer, 2012.
             <span class="screen-only">(<a href="papers/conf-cav-AtigBEL12.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Ahmed Bouajjani and Michael Emmi.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-642-28756-5_31">Bounded Phase Analysis of Message-Passing Programs</a>.
@@ -180,8 +183,8 @@
             (<abbr>TACAS</abbr>&nbsp;’12), <abbr>LNCS</abbr>, volume 7214, pages 451–465.
             Springer, 2012.
             <span class="screen-only">(<a href="papers/conf-tacas-BouajjaniE12.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Ahmed Bouajjani and Michael Emmi.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/2103656.2103681">Analysis of Recursively Parallel Programs</a>.
@@ -190,8 +193,8 @@
             (<abbr>POPL</abbr>&nbsp;’12), pages 203–214.
             <abbr>ACM</abbr>, 2012.
             <span class="screen-only">(<a href="papers/conf-popl-BouajjaniE12.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Ahmed Bouajjani, Michael Emmi, and Gennaro Parlato.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-642-23702-7_13">On Sequentializing Concurrent Programs</a>.
@@ -200,8 +203,8 @@
             (<abbr>SAS</abbr>&nbsp;’11), <abbr>LNCS</abbr>, volume 6887, pages 129–145.
             Springer, 2011.
             <span class="screen-only">(<a href="papers/conf-sas-BouajjaniEP11.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi, Shaz Qadeer, and Zvonimir Rakamaric.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/1926385.1926432">Delay-Bounded Scheduling</a>.
@@ -210,8 +213,8 @@
             (<abbr>POPL</abbr>&nbsp;’11), pages 411–422.
             <abbr>ACM</abbr>, 2011.
             <span class="screen-only">(<a href="papers/conf-popl-EmmiQR11.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi, Rupak Majumdar, and Roman Manevich.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/1806596.1806613">Parameterized Verification of Transactional Memories</a>.
@@ -220,8 +223,8 @@
             (<abbr>PLDI</abbr>&nbsp;’10), pages 134–145.
             <abbr>ACM</abbr>, 2010.
             <span class="screen-only">(<a href="papers/conf-pldi-EmmiMM10.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi, Ranji Jhala, Eddie Kohler, and Rupak Majumdar.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-642-00768-2_30">Verifying Reference Counting Implementations</a>.
@@ -230,8 +233,8 @@
             (<abbr>TACAS</abbr>&nbsp;’09), <abbr>LNCS</abbr>, volume 5505, pages 352–367.
             Springer, 2009.
             <span class="screen-only">(<a href="papers/conf-tacas-EmmiJKM09.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi, Dimitra Giannakopoulou, and Corina S. Pasareanu.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-540-68237-0_10">Assume-Guarantee Verification for Interface Automata</a>.
@@ -240,8 +243,8 @@
             (<abbr>FM</abbr>&nbsp;’08), <abbr>LNCS</abbr>, volume 5014, pages 116–131.
             Springer, 2008.
             <span class="screen-only">(<a href="papers/conf-fm-EmmiGP08.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Juan Chen, Chris Hawblitzel, Frances Perry, Michael Emmi, Jeremy Condit, Derrick Coetzee, and Polyvios Pratikakis.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/1375581.1375604">Type-Preserving Compilation for Large-Scale Optimizing Object-Oriented Compilers</a>.
@@ -250,8 +253,8 @@
             (<abbr>PLDI</abbr>&nbsp;’08), pages 183–192.
             <abbr>ACM</abbr>, 2008.
             <span class="screen-only">(<a href="papers/conf-pldi-ChenHPECCP08.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Alice Wang, Michael Emmi, and Petros Faloutsos.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/1274940.1274947">Assembling an Expressive Facial Animation System</a>.
@@ -260,8 +263,8 @@
             (<abbr>Sandbox</abbr>&nbsp;’07), pages 21–26.
             <abbr>ACM</abbr>, 2007.
             <span class="screen-only">(<a href="papers/conf-sandbox-WangEF07.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi, Rupak Majumdar, and Koushik Sen.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/1273463.1273484">Dynamic Test Input Generation for Database Applications</a>.
@@ -270,8 +273,8 @@
             (<abbr>ISSTA</abbr>&nbsp;’07), pages 151–162.
             <abbr>ACM</abbr>, 2007.
             <span class="screen-only">(<a href="papers/conf-issta-EmmiMS07.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi and Rupak Majumdar.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-540-69738-1_2">Verifying Compensating Transactions</a>.
@@ -280,8 +283,8 @@
             (<abbr>VMCAI</abbr>&nbsp;’07), <abbr>LNCS</abbr>, volume 4349, pages 29–43.
             Springer, 2007.
             <span class="screen-only">(<a href="papers/conf-vmcai-EmmiM07.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi, Jeff Fischer, Ranjit Jhala, and Rupak Majumdar.
             <span class="article-title">
                 <a href="http://doi.acm.org/10.1145/1190216.1190260">Lock Allocation</a>.
@@ -290,8 +293,8 @@
             (<abbr>POPL</abbr>&nbsp;’07), pages 291–296.
             <abbr>ACM</abbr>, 2007.
             <span class="screen-only">(<a href="papers/conf-popl-EmmiFJM07.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
-          <div class="item">
+          </li>
+          <li class="item">
             Michael Emmi and Rupak Majumdar.
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/11730637_17">Decision Problems for the Verification of Real-Time Software</a>.
@@ -300,7 +303,8 @@
             (<abbr>HSCC</abbr>&nbsp;’06), <abbr>LNCS</abbr>, volume 3927, pages 200–211.
             Springer, 2006.
             <span class="screen-only">(<a href="papers/conf-hscc-EmmiM06.pdf"><abbr>PDF</abbr></a>)</span>
-          </div>
+          </li>
+      </ol>
     </section>
 
   </body>
