Updated contact info.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / &lt;abbr&gt;IMDEA&lt;/abbr&gt; Software Institute">
+    <meta name="description" class="template" content="Michael Emmi: Researcher / Bell Labs, Nokia">
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon|IM+Fell+French+Canon+SC' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen" href="css/screen.css">
     <link rel="stylesheet" media="print" href="css/print.css">
@@ -16,7 +16,7 @@
 
         <section id="header">
           <h1 class="title">Michael Emmi</h1>
-          <div class="tagline">Researcher / <abbr>IMDEA</abbr> Software Institute</div>
+          <div class="tagline">Researcher / Bell Labs, Nokia</div>
           <div class="item">
               <span class="tag"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
               <span class="tag"><a href="https://github.com/michael-emmi">@GitHub</a></span>
@@ -407,14 +407,13 @@
 
         <section id="contact">
           <h2>Contact</h2>
-            <div class="item"><abbr>IMDEA</abbr> Software Institute<br>
-Campus Montegancedo <abbr>UPM</abbr><br>
-28223 Pozuelo de Alarcón, Madrid<br>
-España
+            <div class="item">Bell Labs, Nokia<br>
+600 Mountain Ave., 2B-439<br>
+Murray Hill, <abbr>NJ</abbr> 07974<br>
+<abbr>USA</abbr>
 </div>
             <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
-              <a href="tel:+34 911 012 202">+34 911 012 202</a> (Spain)<br>
-              <a href="tel:+1 (310) 564-6453">+1 (310) 564-6453</a> (<abbr>USA</abbr>)<br>
+              <a href="tel:+1 (908) 743-4680">+1 (908) 743-4680</a> <br>
         </section>
 
       </div>
