--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-    <meta name="description" class="template" content="Michael Emmi: Researcher / &lt;abbr&gt;IMDEA&lt;/abbr&gt; Software Institute">
+    <meta name="description" class="template" content="Michael Emmi: Researcher / Bell Labs, Nokia">
 
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+French+Canon|IM+Fell+French+Canon+SC' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen" href="css/screen.css">
@@ -17,17 +17,16 @@
       <div class="tagline">Researcher</div>
         <div class="row">
           <div class="column left">
-            <div class="item"><abbr>IMDEA</abbr> Software Institute<br>
-Campus Montegancedo <abbr>UPM</abbr><br>
-28223 Pozuelo de Alarcón, Madrid<br>
-España
+            <div class="item">Bell Labs, Nokia<br>
+600 Mountain Ave., 2B-439<br>
+Murray Hill, <abbr>NJ</abbr> 07974<br>
+<abbr>USA</abbr>
 </div>
           </div>
           <div class="column right">
             <a href="http://michael-emmi.github.io">http://michael-emmi.github.io</a><br>
             <a href="mailto:michael.emmi@gmail.com">michael.emmi@gmail.com</a><br>
-              <a href="tel:+34 911 012 202">+34 911 012 202</a> (Spain)<br>
-              <a href="tel:+1 (310) 564-6453">+1 (310) 564-6453</a> (<abbr>USA</abbr>)<br>
+              <a href="tel:+1 (908) 743-4680">+1 (908) 743-4680</a> <br>
           </div>
         </div>
     </section>
