--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
+                <span class="rhs"><a href=""><abbr>EC<sup>2</sup></abbr>&nbsp;’16</a></span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
                 <span class="rhs"><a href="http://www.cs.utexas.edu/~hunt/fmcad/"><abbr>FMCAD</abbr>&nbsp;’16</a></span>
               </div>
             </div>
