--- a/cv.html
+++ b/cv.html
@@ -140,6 +140,11 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="">9th International Workshop on Exploiting Concurrency Efficiently and Correctly</a></span>
+          (<abbr>EC<sup>2</sup></abbr>&nbsp;’16).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="http://www.cs.utexas.edu/~hunt/fmcad/">16th International Conference on Formal Methods in Computer-Aided Design</a></span>
           (<abbr>FMCAD</abbr>&nbsp;’16).
         </div>
