--- a/cv.html
+++ b/cv.html
@@ -114,7 +114,7 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
           <span class="print-only"><a href="mailto:abou@liafa.univ-paris-diderot.fr">abou@liafa.univ-paris-diderot.fr</a></span>
         </div>
         <div class="item">
-          <span class="article-title"><a href="http://www.mpi-sws.org/~rupak/">Rupak Majumdar</a></span>. Scientific Director, Max Planck Institut for Software Systems.
+          <span class="article-title"><a href="http://www.mpi-sws.org/~rupak/">Rupak Majumdar</a></span>. Scientific Director, Max Planck Institute for Software Systems.
           <span class="print-only"><a href="mailto:rupak@mpi-sws.org">rupak@mpi-sws.org</a></span>
         </div>
         <div class="item">
