Added current appointment.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -70,7 +70,10 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
     <section id="positions">
       <h2>Employment</h2>
         <div class="item">
-          <span class="article-title">Researcher</span>. <abbr>IMDEA</abbr> Software Institute, Madrid, 2013–Present.
+          <span class="article-title">Member of Technical Staff</span>. Bell Labs, Nokia, Murray Hill, NJ, 2016–present.
+        </div>
+        <div class="item">
+          <span class="article-title">Researcher</span>. <abbr>IMDEA</abbr> Software Institute, Madrid, 2013–2016.
         </div>
         <div class="item">
           <span class="article-title">Postdoc Researcher</span>. <abbr>LIAFA</abbr>, Universtié Paris Diderot, 2010–2013.
