--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
             <span class="article-title">
                 <a href="http://dx.doi.org/10.1007/978-3-319-21690-4_28">Systematic Asynchrony Bug Exploration for Android Apps</a>.
             </span>
-            In <span class="article-volume">Proc. 27th International Conference on. Computer Aided Verification</span>
+            In <span class="article-volume">Proc. 27th International Conference on Computer Aided Verification</span>
             (<abbr>CAV</abbr>&nbsp;’15), <abbr>LNCS</abbr>, volume 9206, pages 455–461.
             Springer, 2015.
             <span class="screen-only">(<a href="papers/conf-cav-OzkanET15.pdf"><abbr>PDF</abbr></a>)</span>
