Added latest publications.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,22 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                    <a>Verifying Constant-Time Implementations</a>
+                </span>
+                <span class="rhs"><abbr>USENIX</abbr>&nbsp;Security&nbsp;’16</span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
+                    <a href="papers/conf-icse-CarterHWRE16.pdf"><abbr>SMACK</abbr> Software Verification Toolchain</a>
+                </span>
+                <span class="rhs"><abbr>ICSE</abbr>&nbsp;’16</span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                     <a href="papers/conf-popl-EmmiE16.pdf">Symbolic Abstract Data Type Inference</a>
                 </span>
                 <span class="rhs"><abbr>POPL</abbr>&nbsp;’16</span>
@@ -141,6 +157,14 @@
                     <a href="papers/conf-cav-OzkanET15.pdf">Systematic Asynchrony Bug Exploration for Android Apps</a>
                 </span>
                 <span class="rhs"><abbr>CAV</abbr>&nbsp;’15</span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
+                    <a href="papers/conf-fsttcs-BouajjaniEEH15.pdf">Checking Correctness of Concurrent Objects: Tractable Reductions to Reachability (Invited Talk)</a>
+                </span>
+                <span class="rhs"><abbr>FSTTCS</abbr>&nbsp;’15</span>
               </div>
             </div>
             <div class="item">
