--- a/publications.html
+++ b/publications.html
@@ -45,9 +45,29 @@
       <h2>In International Conference Proceedings</h2>
       <ol>
           <li class="item">
+            Jose Carlos Bacelar Almeida, Manuel Barbosa, Gilles Barthe, François Dupressoir, and Michael Emmi.
+            <span class="article-title">
+                Verifying Constant-Time Implementations.
+            </span>
+            In <span class="article-volume">Proc. 25th USENIX Security Symposium</span>
+            (<abbr>USENIX</abbr>&nbsp;Security&nbsp;’16).
+            <abbr>USENIX</abbr>&nbsp;Association, 2016.
+            
+          </li>
+          <li class="item">
+            Montgomery Carter, Shaobo He, Jonathan Whitaker, Zvonimir Rakamaric, and Michael Emmi.
+            <span class="article-title">
+                <a href="http://doi.acm.org/10.1145/2889160.2889163"><abbr>SMACK</abbr> Software Verification Toolchain</a>.
+            </span>
+            In <span class="article-volume">Proc. 38th International Conference on Software Engineering</span>
+            (<abbr>ICSE</abbr>&nbsp;’16), pages 589–592.
+            <abbr>ACM</abbr>, 2016.
+            <span class="screen-only">(<a href="papers/conf-icse-CarterHWRE16.pdf"><abbr>PDF</abbr></a>)</span>
+          </li>
+          <li class="item">
             Michael Emmi and Constantin Enea.
             <span class="article-title">
-                Symbolic Abstract Data Type Inference.
+                <a href="http://doi.acm.org/10.1145/2837614.2837645">Symbolic Abstract Data Type Inference</a>.
             </span>
             In <span class="article-volume">Proc. 43rd <abbr>ACM</abbr> <abbr>SIGPLAN</abbr>-<abbr>SIGACT</abbr> Symposium on Principles of Programming Languages</span>
             (<abbr>POPL</abbr>&nbsp;’16), pages 513–525.
@@ -63,6 +83,16 @@
             (<abbr>CAV</abbr>&nbsp;’15), <abbr>LNCS</abbr>, volume 9206, pages 455–461.
             Springer, 2015.
             <span class="screen-only">(<a href="papers/conf-cav-OzkanET15.pdf"><abbr>PDF</abbr></a>)</span>
+          </li>
+          <li class="item">
+            Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Jad Hamza.
+            <span class="article-title">
+                <a href="http://dx.doi.org/10.4230/LIPIcs.FSTTCS.2015.2">Checking Correctness of Concurrent Objects: Tractable Reductions to Reachability (Invited Talk)</a>.
+            </span>
+            In <span class="article-volume">Proc. 35th <abbr>IARCS</abbr> Annual Conference on Foundation of Software Technology and Theoretical Computer Science</span>
+            (<abbr>FSTTCS</abbr>&nbsp;’15), <abbr>LIPI</abbr>cs, volume 45, pages 95–107.
+            Schloss Dagstuhl — Leibniz-Zentrum fuer Informatik, 2015.
+            <span class="screen-only">(<a href="papers/conf-fsttcs-BouajjaniEEH15.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
           <li class="item">
             Ahmed Bouajjani, Michael Emmi, Constantin Enea, and Jad Hamza.
