Added qualifications to fake papers.

--- a/publications.html
+++ b/publications.html
@@ -60,7 +60,7 @@
                 <a href="http://doi.acm.org/10.1145/2889160.2889163"><abbr>SMACK</abbr> Software Verification Toolchain</a>.
             </span>
             In <span class="article-volume">Proc. 38th International Conference on Software Engineering</span>
-            (<abbr>ICSE</abbr>&nbsp;’16), pages 589–592.
+            (<abbr>ICSE</abbr>&nbsp;Companion&nbsp;’16), pages 589–592.
             <abbr>ACM</abbr>, 2016.
             <span class="screen-only">(<a href="papers/conf-icse-CarterHWRE16.pdf"><abbr>PDF</abbr></a>)</span>
           </li>
@@ -117,7 +117,7 @@
           <li class="item">
             Arvind Haran, Montgomery Carter, Michael Emmi, Akash Lal, Shaz Qadeer, and Zvonimir Rakamaric.
             <span class="article-title">
-                <a href="http://dx.doi.org/10.1007/978-3-662-46681-0_42"><abbr>SMACK</abbr>+Corral: A Modular Verifier</a>.
+                <a href="http://dx.doi.org/10.1007/978-3-662-46681-0_42"><abbr>SMACK</abbr>+Corral: A Modular Verifier (Competition Contribution)</a>.
             </span>
             In <span class="article-volume">Proc. 21st International Conference on Tools and Algorithms for the Construction and Analysis of Systems</span>
             (<abbr>TACAS</abbr>&nbsp;’15), <abbr>LNCS</abbr>, volume 9035, pages 451–454.
