--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <span class="lhs">
                     <a href="papers/conf-icse-CarterHWRE16.pdf"><abbr>SMACK</abbr> Software Verification Toolchain</a>
                 </span>
-                <span class="rhs"><abbr>ICSE</abbr>&nbsp;’16</span>
+                <span class="rhs"><abbr>ICSE</abbr>&nbsp;Companion&nbsp;’16</span>
               </div>
             </div>
             <div class="item">
@@ -186,7 +186,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a href="papers/conf-tacas-HaranCELQR15.pdf"><abbr>SMACK</abbr>+Corral: A Modular Verifier</a>
+                    <a href="papers/conf-tacas-HaranCELQR15.pdf"><abbr>SMACK</abbr>+Corral: A Modular Verifier (Competition Contribution)</a>
                 </span>
                 <span class="rhs"><abbr>TACAS</abbr>&nbsp;’15</span>
               </div>
