Added USS paper.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
-                    <a>Verifying Constant-Time Implementations</a>
+                    <a href="papers/conf-uss-AlmeidaBBDE16.pdf">Verifying Constant-Time Implementations</a>
                 </span>
                 <span class="rhs"><abbr>USENIX</abbr>&nbsp;Security&nbsp;’16</span>
               </div>
