--- a/cv.html
+++ b/cv.html
@@ -213,12 +213,12 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
         <div class="item">
           Jose Carlos Bacelar Almeida, Manuel Barbosa, Gilles Barthe, François Dupressoir, and Michael Emmi.
           <span class="article-title">
-              Verifying Constant-Time Implementations.
+              <a href="https://www.usenix.org/conference/usenixsecurity16/technical-sessions/presentation/almeida">Verifying Constant-Time Implementations</a>.
           </span>
-          In <span class="article-volume">Proc. 25th USENIX Security Symposium</span>
-          (<abbr>USENIX</abbr>&nbsp;Security&nbsp;’16).
+          In <span class="article-volume">Proc. 25th <abbr>USENIX</abbr> Security Symposium</span>
+          (<abbr>USENIX</abbr>&nbsp;Security&nbsp;’16), pages 53–70.
           <abbr>USENIX</abbr>&nbsp;Association, 2016.
-          
+          <span class="screen-only">(<a href="papers/conf-uss-AlmeidaBBDE16.pdf"><abbr>PDF</abbr></a>)</span>
         </div>
         <div class="item">
           Montgomery Carter, Shaobo He, Jonathan Whitaker, Zvonimir Rakamaric, and Michael Emmi.
