Added FORTE activity.

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -138,6 +138,11 @@ Murray Hill, <abbr>NJ</abbr> 07974<br>
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="">37th <abbr>IFIP</abbr> International Conference on Formal Techniques for Distributed Objects, Components and Systems</a></span>
+          (<abbr>FORTE</abbr>&nbsp;’17).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="http://fossacs.pps.univ-paris-diderot.fr">20th International Conference on Foundations of Software Science and Computation Structures</a></span>
           (<abbr>FoSSaCS</abbr>&nbsp;’17).
         </div>
