--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">Program Committee</span>
+                <span class="rhs"><a href=""><abbr>FORTE</abbr>&nbsp;’17</a></span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
                 <span class="rhs"><a href="http://fossacs.pps.univ-paris-diderot.fr"><abbr>FoSSaCS</abbr>&nbsp;’17</a></span>
               </div>
             </div>
